# squid

./: CONTRIBUTORS  configure.ac  squid.dox  test-builds.sh
.github/workflows/: codeql-analysis.yml
acinclude/: krb5.m4  lib-checks.m4  pam.m4  squid-util.m4  tdb.m4
compat/: GnuRegex.c  Makefile.am  assert.cc  compat.cc  compat.h  getaddrinfo.cc  getnameinfo.cc  inet_ntop.cc  inet_pton.cc  initgroups.c  mswindows.cc  openssl.h  shm.cc  socks.h  statvfs.cc  strnstr.cc  xstrto.cc
compat/os/: mingw.h  mswindows.h
contrib/: url-normalizer.pl
doc/: debug-sections.txt
doc/release-notes/: release-6.sgml  release-7.sgml.in
include/: base64.h  hash.h  radix.h  rfc1738.h  splay.h
lib/: Makefile.am  hash.cc  md5.c  radix.cc  rfc1738.c  sspwin32.cc  util.c
lib/libTrie/: TrieNode.cc
lib/ntlmauth/: ntlmauth.cc  ntlmauth.h  support_bits.cci
lib/profiler/: Profiler.cc
lib/smblib/: bad-chain.c  exper.c  file.c  find_password.c  smb-errors.c  smblib-api.c  smblib-util.c  smblib.c
lib/tests/: testRFC1738.cc
scripts/: formater.pl  mk-squid.conf-parser.pl
scripts/maintenance/: HERE-obsolete  upgrade-NULL
src/: AccessLogEntry.cc  AccessLogEntry.h  AclRegs.cc  AuthReg.cc  BandwidthBucket.cc  BodyPipe.cc  CachePeer.cc  CachePeer.h  ClientDelayConfig.cc  ClientDelayConfig.h  ClientInfo.h  ClientRequestContext.h  CollapsedForwarding.cc  CommCalls.cc  CommCalls.h  CompositePoolNode.h  ConfigParser.cc  ConfigParser.h  CpuAffinity.cc  CpuAffinityMap.cc  Debug.h  DelayConfig.cc  DelayId.cc  DelayPool.cc  DelayPool.h  DelaySpec.cc  DelayTagged.cc  DelayTagged.h  DelayUser.cc  DelayUser.h  DelayVector.cc  Downloader.cc  ETag.cc  ETag.h  EventLoop.cc  ExternalACL.h  ExternalACLEntry.cc  ExternalACLEntry.h  FadingCounter.cc  FadingCounter.h  (+163 more)
src/DiskIO/: DiskIOModule.cc
src/acl/: Acl.cc  Acl.h  AclDenyInfoList.h  AclSizeLimit.cc  AclSizeLimit.h  AdaptationService.cc  AdaptationService.h  AdaptationServiceData.cc  AdaptationServiceData.h  Address.cc  Address.h  AllOf.cc  AllOf.h  AnnotateClient.cc  AnnotateClient.h  AnnotateTransaction.cc  AnnotateTransaction.h  AnnotationData.cc  AnnotationData.h  Answer.h  AnyOf.cc  AnyOf.h  Arp.cc  Arp.h  Asn.cc  Asn.h  AtStep.cc  AtStep.h  AtStepData.cc  AtStepData.h  BoolOps.cc  BoolOps.h  Certificate.cc  Certificate.h  CertificateData.cc  CertificateData.h  Checklist.cc  Checklist.h  ConnMark.h  ConnectionsEncrypted.cc  (+120 more)
src/adaptation/: AccessCheck.cc  AccessCheck.h  AccessRule.cc  AccessRule.h  Config.cc  History.cc  Initiate.cc  Iterator.cc  Iterator.h  Message.cc  Message.h  Service.cc  ServiceConfig.cc  ServiceFilter.cc  ServiceFilter.h  ServiceGroups.cc
src/anyp/: Babble.cc  Babble.h  Makefile.am  PortCfg.cc  PortCfg.h  ProtocolType.h  TrafficMode.h  Uri.cc  Uri.h  Url.cc  Url.h  forward.h
src/auth/: Acl.cc  Acl.h  AclMaxUserIp.cc  AclMaxUserIp.h  AclProxyAuth.cc  AclProxyAuth.h  Config.h  CredentialsCache.cc  Gadgets.cc  Makefile.am  Scheme.cc  SchemeConfig.cc  SchemeConfig.h  SchemesConfig.cc  Type.h  User.cc  UserRequest.cc  UserRequest.h  forward.h
src/base/: AsyncCallQueue.cc  AsyncJob.cc  CbcPointer.h  File.cc  (+9 more)
src/http/: CommonStructure.cc  CommonStructure.h  Config.cc  Config.h  ConfigForwardedExt.cc  ConfigForwardedExt.h  ContentLengthInterpreter.cc  HeaderField.cc  HeaderField.h  Makefile.am  Message.cc  Message.h  Parser.cc  Parser.h  RegisteredHeaders.cc  RegisteredHeaders.h  RegisteredHeadersHash.cci  RegisteredHeadersHash.gperf  StatusLine.cc  Stream.cc  Stream.h  forward.h
src/http/one/: Makefile.am  Parser.cc  Parser.h  RequestParser.cc  RequestParser.h  ResponseParser.cc  ResponseParser.h  TeChunkedParser.cc  TeChunkedParser.h  Tokenizer.cc  Tokenizer.h  forward.h
src/http/two/: Frame.h  FrameParser.cc  FrameParser.h  HpackHuffmanDecoder.cc  Makefile.am  Settings.cc  Settings.h  StreamContext.cc
src/http/url_rewriters/LFS/: rredir.cc  url_lfs_rewrite.pl.in
src/http/url_rewriters/fake/: fake.cc
src/icp/: ICP.h  Makefile.am  icp_v2.cc  icp_v3.cc
src/shaping/: BandwidthBucket.cc  BandwidthBucket.h  DelayBucket.cc  DelayBucket.h  DelayPools.cc  DelayPools.h  Makefile.am  MessageBucket.cc  MessageBucket.h  QuotaBucket.cc  QuotaBucket.h  QuotaQueue.cc  QuotaQueue.h  forward.h
src/store/: Controller.cc  Disk.cc  Disk.h  Disks.cc  LocalSearch.cc  Makefile.am  MetaMd5.cc  MetaMd5.h  MetaObjSize.h  MetaStd.cc  MetaStd.h  MetaStdLfs.cc  MetaStdLfs.h  MetaTlv.cc  MetaTlv.h  MetaUrl.cc  MetaUrl.h  MetaVary.cc  MetaVary.h  forward.h
test-suite/: Makefile.am  VirtualDeleteOperator.cc  splay.cc  test_tools.cc
tools/: cachemgr.cc  helper-ok-dying.pl  helper-ok.pl
(+496 files in other folders)
