## Copyright (C) 1996-2021 The Squid Software Foundation and contributors
##
## Squid software is distributed under GPLv2+ license and includes
## contributions from numerous individuals and organizations.
## Please see the COPYING and CONTRIBUTORS files for details.
##

include $(top_srcdir)/src/Common.am

noinst_LTLIBRARIES = libshaping.la

libshaping_la_SOURCES = \
	BandwidthBucket.cc \
	BandwidthBucket.h \
	DelayBucket.cc \
	DelayBucket.h \
	forward.h \
	MessageBucket.cc \
	MessageBucket.h \
	QuotaBucket.cc \
	QuotaBucket.h \
	QuotaQueue.cc \
	QuotaQueue.h
